# FRCMake

./: CMakeLists.txt
cmake/modules/: FRCMake.cmake  frcmake-deploy.sh
test_project/: Robot.cpp
